# findsoftware.github.io

./: .gitignore  .gitlab-ci.yml  .markdownlint.yml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  README.md  domains  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  find.software.bib  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: ci.yml
.woodpecker/: publish.yml
blog/: index.html
blog/2025/09/17/first-blog-post---dfg-grant-received/: index.html
blog/2025/12/05/findsoftware-kickoff-at-ufz/: index.html
blog/2026/03/02/get-your-software-a-wikidata-id-why-software-developers-should-add-their-projects-to-wikidata/: index.html
blog/2026/03/12/recent-slides-and-poster/: index.html
blog/2026/04/20/findsoftware-at-derse-collaboration-workshop/: index.html
blog/archive/2025/: index.html
blog/archive/2026/: index.html
docs/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: 2025-09-17-post.md  2025-12-05-post.md  2026-02-21-post.md  2026-03-02-post.md  2026-03-12-post.md  2026-04-20-post.md
docs/css/: extra.css
docs/friends/: index.md
docs/output/: index.md
docs/publications/: index.md
docs/talks/: index.md
docs/team/: index.md
docs/workshops/: index.md
friends/: index.html
includes/: abbreviations.md
output/: index.html
overrides/: main.html
overrides/partials/: actions.html  footer.html
publications/: index.html
search/: search_index.json
tags/: index.html
team/: index.html
workshops/: index.html
